added template responsive Co-authored-by: luca-masera <luca-masera@users.noreply.github.com> Co-authored-by: fcarrara24 <fcarrara24@users.noreply.github.com>

--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -1,1 +1,7 @@
-$text-color: rgb(27, 112, 240);
+$primary-color: #0476D9;
+$dark-primary: #023E73;
+$light-primary: #05DBF2;
+$green-color: #04BFAD;
+$lemon-color: #95D904;
+$light-color: #f6f9ff;
+$text-color: #444444;
