--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -13,6 +13,17 @@ $fa-font-path: "../fonts/webfonts" !default;
 .txt-dark{
     color: $dark-primary !important;
 }
+.box-img{
+    border-radius: 20px;
+    overflow: hidden ;
+width: 100px;
+height: 100px;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
