layout of payment Co-authored-by: Stefano Zidda <Trotteriniku@users.noreply.github.com> Co-authored-by: SimoneNegrisoli <SimoneNegrisoli@users.noreply.github.com> Co-authored-by: Francesco Carrara <fcarrara24@users.noreply.github.com> Co-authored-by: luca-masera <luca-masera@users.noreply.github.com> Co-authored-by: Mekki Ouertani <mekkiouertani@users.noreply.github.com>

--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -5,3 +5,9 @@ $green-color: #04BFAD;
 $lemon-color: #95D904;
 $light-color: #f6f9ff;
 $text-color: #444444;
+
+$red: #E91E63;
+$blue: #3F51B5;
+$grey: #EAE8E9;
+$grey2: #f3f3f3;
+$white: #FFF;
