--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -9,7 +9,16 @@ $fa-font-path: "../fonts/webfonts" !default;
 
 @import '~bootstrap/scss/bootstrap';
 
+// SPONSOR
 
+.mysponsor{
+    background-color:rgb(248, 215, 96);
+    padding: 5px 25px;
+    border-radius: 25px;
+    margin-top: 10px;
+}
+
+//
 .txt-dark{
     color: $dark-primary !important;
 }
