--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -19,14 +19,17 @@ $fa-font-path: "../fonts/webfonts" !default;
 }
 
 //
+
+
+
 .txt-dark{
     color: $dark-primary !important;
 }
 .box-img{
     border-radius: 20px;
     overflow: hidden ;
-width: 100px;
-height: 100px;
+    width: 100px;
+    height: 100px;
     img{
         width: 100%;
         height: 100%;
@@ -278,6 +281,7 @@ Media Queries
     width: 100%;
   }
 }
+
 
 
 
@@ -904,6 +908,20 @@ Media Queries
   .sidebar::-webkit-scrollbar-thumb {
     background-color: #aab7cf;
   }
+  @media (max-width: 1500px) {
+    .invisible-1100{
+        display: block;
+      }
+      td{
+        font-size:0.7em;
+      }
+  }
+
+  @media (max-width: 1200){
+    .invisible-1100{
+        display: none;
+      }
+  }
 
   @media (min-width: 1200px) {
 
@@ -916,6 +934,18 @@ Media Queries
   @media (max-width: 1199px) {
     .toggle-sidebar .sidebar {
       left: 0;
+    }
+  }
+
+  @media(max-width: 1100px){
+    .invisible-1100{
+      display: none;
+    }
+
+  }
+  @media(max-width: 991px){
+    .invisible-1100{
+      display: block;
     }
   }
 
@@ -1506,4 +1536,13 @@ Media Queries
     text-align: center;
     font-size: 13px;
     color: $primary-color;
+  }
+
+
+  /*--------------------------------------------------------------
+  # Query fix
+  --------------------------------------------------------------*/
+
+  .my-height-85{
+    height: 85%;
   }
