--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -637,6 +637,14 @@ Media Queries
   .logo {
     line-height: 1;
   }
+  .pic2{
+    width: 100px;
+    img{
+        width: 100%;
+        height: 150%;
+        object-fit: contain;
+    }
+  }
 
   @media (min-width: 1200px) {
     .logo {
@@ -655,6 +663,9 @@ Media Queries
     color: $primary-color;
     font-family: "Nunito", sans-serif;
   }
+.txt-b{
+    color: $primary-color;
+}
 
   .header {
     transition: all 0.5s;
